# cdp-sdk

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  openapi.yaml  rust-toolchain.toml
python/x402/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
python/x402/cdp_x402/: __init__.py
python/x402/docs/: env-setup.md  quickstart-buyers.md  sdk-support.md
python/x402/e2e/: .env.example  cdp_wallet_e2e.py  guardrails_e2e.py  server.py  server_e2e.py
python/x402/tests/: test_public_exports.py
rust/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
rust/changelog.d/: 654.feature.md  656.feature.md  663.feature.md  fix-wallet-auth-missing-paths.fix.md  send-end-user-operation-rule.feature.md  wallet_wrapper.feature.md
rust/examples/: comprehensive_api_usage.rs  evm_account_management.rs  evm_signing.rs  sign_transaction.rs  smart_account_management.rs  solana_account_management.rs  solana_signing.rs  token_balances.rs  wallet_client.rs
rust/openapi-client/: Cargo.toml  README.md
rust/openapi-client/docs/: AbiFunction.md  AbiInner.md  AbiInput.md  AbiParameter.md  AbiStateMutability.md  AccountTokenAddressesResponse.md  AuthenticationMethod.md  CommonSwapResponse.md  CommonSwapResponseFees.md  CommonSwapResponseIssues.md  CommonSwapResponseIssuesAllowance.md  CommonSwapResponseIssuesBalance.md  CreateEvmAccountRequest.md  CreateEvmSmartAccountRequest.md  CreateEvmSwapQuoteRequest.md  CreateOnrampOrder201Response.md  CreateOnrampOrderRequest.md  CreatePaymentTransferQuote201Response.md  CreatePaymentTransferQuoteRequest.md  CreatePolicyRequest.md  CreateSolanaAccountRequest.md  CreateSpendPermissionRequest.md  CreateSwapQuoteResponse.md  CreateSwapQuoteResponseAllOfPermit2.md  CreateSwapQuoteResponseAllOfTransaction.md  CreateSwapQuoteResponseWrapper.md  CryptoRail.md  CryptoRailAddress.md  CryptoRailNetworksInner.md  DeveloperJwtAuthentication.md  Eip712Domain.md  Eip712Message.md  EmailAuthentication.md  EndUser.md  EndUserAccountsApi.md  Error.md  ErrorType.md  EthValueCriterion.md  EvmAccount.md  EvmAccountsApi.md  (+152 more)
rust/src/: api.rs  auth.rs  client.rs  error.rs  evm.rs  lib.rs  policies.rs  solana.rs  wallet.rs
rust/src/apis/: configuration.rs  end_user_accounts_api.rs  evm_accounts_api.rs  evm_smart_accounts_api.rs  evm_swaps_api.rs  evm_token_balances_api.rs  faucets_api.rs  mod.rs  onchain_data_api.rs  policy_engine_api.rs  solana_accounts_api.rs
rust/src/models/: abi_function.rs  abi_inner.rs  abi_parameter.rs  abi_state_mutability.rs  account_token_addresses_response.rs  common_swap_response.rs  common_swap_response_issues.rs  common_swap_response_issues_balance.rs  create_evm_smart_account_request.rs  create_evm_swap_quote_request.rs  create_payment_transfer_quote_201_response.rs  create_payment_transfer_quote_request.rs  create_spend_permission_request.rs  create_swap_quote_response.rs  create_swap_quote_response_all_of_permit2.rs  create_swap_quote_response_all_of_transaction.rs  crypto_rail.rs  eip712_domain.rs  email_authentication.rs  error_type.rs  evm_account.rs  evm_call.rs  evm_data_condition_params_inner.rs  evm_message_criterion.rs  evm_swaps_network.rs  evm_typed_address_condition.rs  evm_typed_numerical_condition.rs  evm_typed_string_condition.rs  evm_user_operation_network.rs  export_evm_account_request.rs  get_swap_price_response.rs  known_abi_type.rs  list_evm_accounts_200_response.rs  list_evm_smart_accounts_200_response.rs  list_evm_token_balances_200_response.rs  list_response.rs  list_solana_accounts_200_response.rs  list_solana_token_balances_200_response.rs  mint_address_criterion.rs  (+39 more)
rust/tests/: wallet_tests.rs
(+2548 files in other folders)
