[package]
name = "cdp-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
jsonwebtoken = "9.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
urlencoding = "2.1"
async-trait = "0.1"
http = "1.0"

[[example]]
name = "sign_transaction"
path = "examples/sign_transaction.rs"

[[example]]
name = "comprehensive_api_usage"
path = "examples/comprehensive_api_usage.rs"
