[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdp-x402"
version = "0.0.1"
description = "Coinbase CDP-opinionated wrapper for the x402 payment protocol"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cdp-sdk>=1.45.1",
    "httpx>=0.28.0",
    "pydantic>=2.7,<3",
    "web3>=7.0.0",
    "x402>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
server-fastapi = [
    "x402[extensions,fastapi,mechanisms]>=2.9.0",
]
server-flask = [
    "x402[extensions,flask,mechanisms]>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/coinbase/cdp-sdk"
Repository = "https://github.com/coinbase/cdp-sdk"

[tool.hatch.build.targets.wheel]
packages = ["cdp_x402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
[[tool.mypy.overrides]]
module = ["cdp.*", "x402.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["httpx.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["web3.*", "eth_typing.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["flask.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["fastapi.*", "starlette.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
